[project]
name = "hi_tbongkim03"
version = "0.8.0"
description = "Default template for PDM package"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
hi-tbongkim03 = "hi_tbongkim03.hello:hi"



[tool.pdm]
distribution = true
